--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -56,6 +56,6 @@
 
 		<footer></footer>
 
-		<!-- This page `{{ page.url | htmlBaseUrl }}` was built on {% currentBuildDate %} -->
+		<!-- This page `${ page.url | htmlBaseUrl }` was built on {% currentBuildDate %} -->
 	</body>
 </html>
