--- a/content/tags.njk
+++ b/content/tags.njk
@@ -9,7 +9,7 @@ pagination:
     - posts
     - tagList
   addAllPagesToCollections: true
-layout: layouts/BaseLayout.11ty.tsx
+layout: layouts/MainLayout.11ty.tsx
 eleventyComputed:
   title: Tagged “{{ tag }}”
 permalink: /tags/{{ tag | slugify }}/
